newclay/test/Compiler/Propagation/Fail/AddressOfRvalue2/main.clay
refReturn() --> rvalue x:Int __c__ """abort();""";

main() {
    return &refReturn();
}
